--- a/LDR_Get_Lyrics_From_Genius.ipynb
+++ b/LDR_Get_Lyrics_From_Genius.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "LDR_Get_Lyrics_From_Genius.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO6lwl/+svamDXHeo4NLhd5",
+      "mount_file_id": "1C_O7zgqSRaCk3vTB0cGaXoYLcHMvOX4N",
+      "authorship_tag": "ABX9TyMbfyGnL6vqPnX+OfRjMLNG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,9 +47,9 @@
       "source": [
         "import json \n",
         "import pandas as pd \n",
-        "import lyricsgenius"
+        "# import lyricsgenius"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -121,6 +122,56 @@
       },
       "source": [
         "lyrics.drop_duplicates().to_csv('lana_lyrics_83.csv')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OC71SapJZPqP"
+      },
+      "source": [
+        "lyrics = pd.read_csv('/content/drive/MyDrive/data/lana_lyrics_83.csv')"
+      ],
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZqagOaAzZbE_",
+        "outputId": "2cacb34f-503d-498a-9f8b-0f8faa9e5d22"
+      },
+      "source": [
+        "lyrics.shape"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(83, 3)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sBE46Gxge8-z"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
