--- a/LDR_by_word.ipynb
+++ b/LDR_by_word.ipynb
@@ -6,7 +6,7 @@
       "name": "LDR_by_word.ipynb",
       "provenance": [],
       "mount_file_id": "1wyacN2Z1_YP6yW7MyXJHLxpMK7D1vPrh",
-      "authorship_tag": "ABX9TyMky4Rq4v2qxij1NIH8A0wK",
+      "authorship_tag": "ABX9TyO5lIg5tv8Vz09gQDzHNgUL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -671,6 +671,15 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "G9zC0bv4P41P"
+      },
+      "source": [
+        "#### Recreate the model and load saved weights"
       ]
     },
     {
