--- a/model_by_character.ipynb
+++ b/model_by_character.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "model_by_character.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,6 +18,16 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/czengnn/lana-del-rey-lyrics-generator/blob/main/model_by_character.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "lh6cwpxzfdt4"
@@ -28,7 +39,7 @@
         "    display(HTML('''<style> pre {white-space: pre-wrap;} </style>'''))\n",
         "get_ipython().events.register('pre_run_cell', set_css)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -62,7 +73,7 @@
         "from keras import backend as K\n",
         "from keras.utils import np_utils"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,7 +98,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,7 +132,7 @@
         "text = re.sub(r'\\[[^][]*\\]', '', text)\n",
         "text = re.sub(r'\\(|\\)', '', text)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -157,7 +168,7 @@
         "vocab = sorted(set(text))\n",
         "print(f'{len(vocab)} unique characters')"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -197,7 +208,7 @@
         "# taking a look at the first 300 characters\n",
         "print(text[:300])"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -259,7 +270,7 @@
         "int_chars = dict((i, c) for i, c in enumerate(chars))\n",
         "chars_int = dict((i, c) for c, i in enumerate(chars))"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -295,7 +306,7 @@
         "print('Total Characters : ' , n_chars) # number of all the characters in lyricsText.txt\n",
         "print('Total Vocab : ', n_vocab) # number of unique characters"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -338,7 +349,7 @@
         "    return tf.strings.reduce_join(chars_from_ids(ids), axis=-1)\n",
         "all_ids = ids_from_chars(tf.strings.unicode_split(text, 'UTF-8'))"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -383,7 +394,7 @@
         "    print(\"Input :\", text_from_ids(input_example).numpy())\n",
         "    print(\"Target:\", text_from_ids(target_example).numpy())"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -437,7 +448,7 @@
         "\n",
         "dataset"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -487,7 +498,7 @@
         "# Number of RNN units\n",
         "rnn_units = 1024"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -544,7 +555,7 @@
         "        else:\n",
         "            return x"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -584,7 +595,7 @@
         "    example_batch_predictions = model(input_example_batch)\n",
         "    print(example_batch_predictions.shape, \"# (batch_size, sequence_length, vocab_size)\")"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -622,7 +633,7 @@
       "source": [
         "model.summary()"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -685,7 +696,7 @@
         "# Save the weights\n",
         "model.save_weights('/content/drive/MyDrive/repos/lana-del-rey-lyrics-generator/models/ldr_by_chars/ldr_by_chars')"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -790,7 +801,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -843,7 +854,7 @@
         "loss = tf.losses.SparseCategoricalCrossentropy(from_logits=True)\n",
         "model_loaded.compile(loss=loss, optimizer='adam')"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -904,7 +915,7 @@
         "    # Return the characters and model state.\n",
         "    return predicted_chars, states"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -946,7 +957,7 @@
         "\n",
         "    return result[0].numpy().decode('utf-8')"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -978,7 +989,7 @@
         "predicted = generate_n_chars(seed='you\\'re so art deco out on the floor shining like gun metal ', n=500, temperature=1.0)\n",
         "print(predicted)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1028,7 +1039,7 @@
         "predicted = generate_n_chars(seed='diamonds in the sky', n=500, temperature=1.0)\n",
         "print(predicted)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
